--- a/Practica_03/Views/Producto/Create.cshtml
+++ b/Practica_03/Views/Producto/Create.cshtml
@@ -42,6 +42,10 @@
                     <input type="text" class="form-control" asp-for="Precio">
                 </div>
                 <div class="form-group">
+                    <label>Precio</label>
+                    <input type="date" class="form-control" asp-for="FechaCreacion.ToString()">
+                </div>
+                <div class="form-group">
                     <label>Cantidad</label>
                     <input type="text" class="form-control" asp-for="Cantidad">
                 </div>
